infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.settle.ml'
spec:
  rules:
    - host: www.settle.ml
      http:
        paths:
          - path: /api/rates/?(.*)
            backend:
              serviceName: rate-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
